--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 0.6.0
+-------------
+    * Set tool-related config to inherit from host repo #58
+    * Use wheel tool to download urls instead of wget #59
+    * Various small bug fixes
+
 Version 0.5.2
 -------------
     * Restore the release of the wheel resolver tool #48
