--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.2.1
+-------------
+    * Test for presence of --system option before invoking pip in pip_library
+    * Add missing third-party packages to built-in test runners
+
 Version 1.2.0
 -------------
     * Allow python_wheel to be run as binary
