--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.1.0
+-------------
+    * Upgrade pytest to 7.2.2
+    * Ensure transitive dependencies are always present in test runners
+
 Version 1.0.0
 -------------
     * Migrate old pex tool across from main please repo
