--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.2.3
+-------------
+    * Remove python hashes feature flag
+
+
 Version 1.2.2
 -------------
     * Upgrade pytest to 7.2.2
