--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.1.1
+-------------
+    * Add debug env variable to only start the debugger when set
+
 Version 1.1.0
 -------------
     * Upgrade pytest to 7.2.2
