--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.4.0
+-------------
+    * Use build.arcat config property instead of the deprecated java.jarcat
+
+
 Version 1.3.0
 -------------
     * Allow pex files to be stamped based on their content hash rather than
