--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.2.0
+-------------
+    * Upgrade importlib-metadata to 6.8.0 (#122) - note that this increases the
+      minimum Python version requirement for please_pex to 3.8
+
 Version 1.1.1
 -------------
     * Add debug env variable to only start the debugger when set
