--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.6.0
+-------------
+    * Add `RequireLicences` config option to make licences mandatory
+      for `pip_library()` and `python_wheel()` (#128)
+
+
 Version 1.5.0
 -------------
     * Upgrade importlib in please_pex's bootstrap pex to 6.8.0 (#122) - note
