--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.2.2
+-------------
+    * Always clean up exploded pex when exiting the Python entry point (#142)
+    * Upgrade coverage in bootstrap pex to 7.3.2 (#126)
+
 Version 1.2.1
 -------------
     * Quieten warnings from ModuleDirImport / SoImport in newer Python versions
