Add wheel_resolver tool.
This is based on work that @samwestmoreland began but became stagnant.
This adds a small tool to resolve wheels from names (with optional
versions) to their wheel download URLs.

--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,9 @@
+## unreleased
+
+### Added
+
+- wheel_resolver tool; see [README](./wheel_resolver/README.md)
+
 Version 1.2.2
 -------------
     * Always clean up exploded pex when exiting the Python entry point (#142)
