--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,8 +1,7 @@
-## unreleased
-
-### Added
-
-- wheel_resolver tool; see [README](./wheel_resolver/README.md)
+Version 1.3.0
+-------------
+    * Added wheel_resolver tool; see [README](./wheel_resolver/README.md)
+    (#149)
 
 Version 1.2.2
 -------------
