--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.3.0
+-------------
+    * Added wheel_resolver tool; see [README](./wheel_resolver/README.md)
+    (#149)
+
 Version 1.2.2
 -------------
     * Always clean up exploded pex when exiting the Python entry point (#142)
