--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.3.1
+-------------
+    * Rebuild tools with Go 1.23.0 (#157)
+
 Version 1.3.0
 -------------
     * Added wheel_resolver tool; see [README](./wheel_resolver/README.md)
