--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.3.2
+-------------
+    * Rebuild tools with Go 1.22.6 due to an incompatibility between Please and Go 1.23 (#160)
+
 Version 1.3.1
 -------------
     * Rebuild tools with Go 1.23.0 (#157)
