--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.7.3
+-------------
+    * Updated xmlrunner package
+
 Version 1.7.2
 -------------
     * Allow the `name_scheme` argument to `python_wheel` to be a list instead of a single string.
