--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,6 +1,6 @@
 Version 1.3.3
 -------------
-    * Include whee_resolver in tools release (#164)
+    * Include wheel_resolver in tools release (#164)
 
 Version 1.3.2
 -------------
