--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.3.4
+-------------
+    * Refactor wheel_resolver to allow for non-PyPI downloads (#167)
+
 Version 1.3.3
 -------------
     * Include wheel_resolver in tools release (#164)
