Allow the `name_scheme` argument to `python_wheel` to be a list instead of a single string.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.7.2
+-------------
+    * Allow the `name_scheme` argument to `python_wheel` to be a list instead of a single string.
+
 Version 1.7.1
 -------------
     * Bug: change so that every URL is passed with its individual --urls flag in python_wheel (#154)
