--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.3.5
+-------------
+    * please_pex is now a statically linked binary for better compatibility (#172)
+
 Version 1.3.4
 -------------
     * Refactor wheel_resolver to allow for non-PyPI downloads (#167)
