--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,11 @@
+Version 1.4.0
+-------------
+    * Drop support for Python < 3.8 in please_pex bootstrap code (#181)
+    * Remove stealth dependency on importlib-metadata in please_pex bootstrap code (#176)
+    * Allow loading of distribution metadata for unimported modules in please_pex meta path
+      finder (#178)
+    * Rebuild tools with Go 1.23.2 (#179)
+
 Version 1.3.5
 -------------
     * please_pex is now a statically linked binary for better compatibility (#172)
