--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.4.1
+-------------
+    * Handle empty contexts in please_pex meta path finder (#184)
+
 Version 1.4.0
 -------------
     * Drop support for Python < 3.8 in please_pex bootstrap code (#181)
