--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.10.0
+--------------
+    * Support in-repo interpreters for tests & add a default shebang (#194)
+
 Version 1.9.1
 -------------
     * Fix some cases of AttributeError turning up from importlib.metadata (#216)
