--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,12 @@
+Version 1.4.2
+-------------
+    * Upgrade `coverage` package to 7.6.4 in please_pex's bootstrap pex (#197)
+      This drops native-speed tracing support for Python 3.8 and adds it for Python 3.13.
+    * Remove unnecessary six dependency in the unittest test runner dependency bundle (#199)
+    * Remove redundant requests dependency from wheel resolver (#200)
+    * Prevent Python >= 3.12 from emitting a `DeprecationWarning` when using `importlib.metadata`
+      on modules in pex files (#203)
+
 Version 1.4.1
 -------------
     * Handle empty contexts in please_pex meta path finder (#184)
