--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.0
+-------------
+    * Add native-speed coverage tracing support for ARM64 platforms in `python_test` (#209)
+    * Fix distribution file enumeration under Python >= 3.12 in please_pex meta path finder (#208)
+
 Version 1.4.2
 -------------
     * Upgrade `coverage` package to 7.6.4 in please_pex's bootstrap pex (#197)
