--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.9.0
+-------------
+    * `python_wheel` now takes `interpreter` as an argument and honours the config setting (#215)
+
 Version 1.8.0
 -------------
     * Further remove support for unsupported versions of Python (#188, #191)
