--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.9.1
+-------------
+    * Fix some cases of AttributeError turning up from importlib.metadata (#216)
+
 Version 1.9.0
 -------------
     * `python_wheel` now takes `interpreter` as an argument and honours the config setting (#215)
