--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.11.0
+--------------
+    * Compile .pyc files for python_wheel (#221)
+    * Performance enhancements to please_pex (#219, #220)
+
 Version 1.10.1
 --------------
     * Exclude in-repo interpreters from collection for pexes during remote execution (#218)
