--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.5.5
+-------------
+    * Fix get_code on ModuleDirImport (#226)
+
 Version 1.5.4
 -------------
     * Handle packages with hyphenated names when loading distribution metadata (#224)
