--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.11.3
+--------------
+    * Fix get_code on ModuleDirImport (#226)
+
 Version 1.11.2
 --------------
     * please_pex now maps hyphens to underscores for resolving distribution metadata (#224)
