--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.12.0
+--------------
+    * Import hooks are now added in the `plz` module and are hence more usefully importable (#229)
+
 Version 1.11.3
 --------------
     * Fix get_code on ModuleDirImport (#226)
