--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.7.0
+-------------
+    * Upgrade coverage package in please_pex's bootstrap .pex to v7.10.7 (#243)
+      This adds native-speed tracing support for Python 3.14.
+    * Provide native-speed tracing when running under musl and free-threaded Python interpreters (#244)
+
 Version 1.6.2
 -------------
     * Bootstrap libraries are correctly included in pexes (#233)
